--- a/app/src/main/res/layout/secondactivity.xml
+++ b/app/src/main/res/layout/secondactivity.xml
@@ -3,14 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cardview_light_background"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
-        android:paddingLeft="150dp"
-        android:text="tuk student cafe" />
+        android:paddingLeft="120dp"
+        android:text="tuk student cafe"
+        android:textAllCaps="true"
+        android:textSize="16sp"
+        android:textColor="@color/design_default_color_primary_variant"/>
 
     <ImageView
         android:id="@+id/imageView4"
@@ -30,7 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
-            android:text="cup" />
+            android:text="cup"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView10"
@@ -38,7 +43,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
-            android:text="0" />
+            android:text="0"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView9"
@@ -46,7 +52,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
-            android:text="Total" />
+            android:text="Total"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textView8"
@@ -54,7 +61,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="15dp"
-            android:text="0" />
+            android:text="0"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -65,9 +73,9 @@
 
         <Button
             android:id="@+id/button3"
-            android:layout_width="wrap_content"
+            android:layout_width="0.5dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:padding="25dp"
@@ -75,12 +83,13 @@
 
         <Button
             android:id="@+id/button2"
-            android:layout_width="wrap_content"
+            android:layout_width="0.5dp"
             android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="40dp"
             android:layout_weight="1"
-            android:padding="25dp"
-            android:text="-" />
+            android:padding="23dp"
+            android:text="-"
+            android:textSize="16dp" />
 
     </LinearLayout>
 
